--- a/package.json
+++ b/package.json
@@ -1,17 +1,15 @@
 {
-  "name": "chess",
-  "version": "1.0.0",
-  "description": "",
-  "main": "./docs/main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "parcel ./docs/index.html",
-    "build": "parcel build ./docs/index.html"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "bundler": "^0.8.0",
-    "parcel": "^2.0.0-beta.2"
-  }
+	"name": "chess",
+	"version": "1.0.0",
+	"description": "Chess Game",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "parcel ./src/index.html --port 3000",
+		"build": "parcel build ./src/index.html"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"parcel": "^2.12.0"
+	}
 }
