--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"parcel": "^2.12.0"
+		"parcel": "^2.12.0",
+		"typescript": "^5.9.3"
 	}
 }
