--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "chess",
-	"version": "1.0.0",
-	"description": "Chess Game",
-	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "parcel ./src/index.html --port 3000",
-		"build": "parcel build ./src/index.html"
-	},
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"parcel": "^2.12.0",
-		"typescript": "^5.9.3"
-	}
+  "name": "chess",
+  "version": "1.0.0",
+  "description": "Chess Game",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "parcel ./src/index.html --port 3000",
+    "build": "parcel build ./src/index.html",
+    "prettier:write": "npx prettier . --write",
+    "prettier:check": "npx prettier . --check"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "parcel": "^2.12.0",
+    "prettier": "3.7.4",
+    "typescript": "^5.9.3"
+  }
 }
